data/derived/fa15/progs/unify/prog1542.ml.out
Characters 62-73:
  | (x::xs') -> x+sumList xs';;
                  ^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
